--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -57,7 +57,7 @@ a:link,a:visited {
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2019</h3>
-<p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
+<p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
@@ -124,7 +124,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 <p>Selected lab sessions will be provided during the semester on the following topics: web services, cloud computing platforms, Tableau, Weka, etc. Selected guest speakers will present in the class.</p>
 </div></div></div>
 <hr>  
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
 <hr> 
 </article><!-- /.node -->
               </div><!-- /#content -->
@@ -146,7 +146,8 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
         <span property="dc:title" content="Footer Logo" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
   
   <div class="content">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="https://www.eller.arizona.edu/"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ailab-ua.github.io/courses/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="http://live-uas-eller.pantheonsite.io/"><img src="https://ailab-ua.github.io/courses/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
+
 </div></div></div>  </div>
 
   
