--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -26,7 +26,7 @@ a:link,a:visited {
                           <h2 class="title" id="page-title"><font face="MiloWeb">MIS 611-D, Topics in Data and Web Mining</font></h2>                                                        
 <div id="block-fieldblock-node-page-default-field-image" class="block block-fieldblock page-image-block first odd">      
   <div class="field field-name-field-image field-type-image field-label-hidden">
-    <img typeof="foaf:Image" src="https://ai.arizona.edu/sites/default/files/styles/banner_image/public/banners/wordle1a3r5.png?itok=KKO60ELV" width="1058" height="386" alt="" />  </div>
+    <img typeof="foaf:Image" src="/courses/MIS611D/wordle1a3r5.png" width="1058" height="386" alt="" />  </div>
 </div>
 <article class="node-13511 node node-page view-mode-full clearfix" about="/mis611d" typeof="foaf:Document">
       <header>
@@ -52,7 +52,7 @@ a:link,a:visited {
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION</h3>
-<p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
+<p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 12:30PM-1:45PM, MCCL 430E <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />Office/Phone: MCCL 430X, (520) 621-4153 <br />
 Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) 
 <br />Class Web site: <a href="https://ailab-ua.github.io/courses/MIS611D">https://ailab-ua.github.io/courses/MIS611D</a> (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
@@ -123,7 +123,7 @@ Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu
 </div></div></div>
   
 <hr>  
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
 
   
 </article><!-- /.node -->
@@ -139,7 +139,7 @@ Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu
         <span property="dc:title" content="Footer Logo" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
   
   <div class="content">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="https://www.eller.arizona.edu/"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ailab-ua.github.io/courses/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="http://live-uas-eller.pantheonsite.io/"><img src="https://ailab-ua.github.io/courses/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
 </div></div></div>  </div>
 
 </div>
