--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ a:link,a:visited {
 <font face="MiloWeb-Text">
 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><h3>Class Resources for <a href="/courses/MIS464">MIS 464</a>, Data Analytics, and <a href="/courses/MIS611D">MIS 611D</a>, Topics in Data and Web Mining (Spring 2019)</h3>
-<p>Instructor:  <a href="https://ai.arizona.edu/about/director"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
+<p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <h3>TOPIC 1: Introduction</h3>
 <ol><li><a href="/courses/chen_mis_review_2019.ppt" target="_blank">University of Arizona MIS Program: Overview</a>, by Dr. Hsinchun Chen</li>
 <li><a href="/courses/resources/01-acm_student_mebership_form.pdf" target="_blank" style="color: #0077b3;">ACM Student Membership Application and Order Form [PDF]</a>, [<a href="https://services.acm.org/public/qj/quickjoin/qj_control.cfm?promo=PWEBTOP&amp;form_type=Student" target="_blank">Online Link</a>]</li>
@@ -240,7 +240,7 @@ a:link,a:visited {
 </ul><hr />
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Class Page for MIS 464, Data Analytics</a>
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a>
-<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/faculty-research/centers-labs/artificial-intelligence">AI Lab Website</a>
+<p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="http://live-uas-eller.pantheonsite.io/departments-research/centers-labs/artificial-intelligence">AI Lab Website</a>
 <p><span style="font-size: small;">Photo provided through courtesy of DARPA and available through <a href="https://commons.wikimedia.org/wiki/File:DARPA_Big_Data.jpg">Wikimedia Commons</a>.</span></p>
 </div></div></div>
 <hr>
@@ -254,7 +254,7 @@ a:link,a:visited {
         <span property="dc:title" content="Footer Logo" class="rdf-meta element-hidden"></span><span property="sioc:num_replies" content="0" datatype="xsd:integer" class="rdf-meta element-hidden"></span>
   
   <div class="content">
-    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="https://www.eller.arizona.edu/"><img src="https://ai.arizona.edu/sites/ai/files/images/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
+    <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><p><a href="http://www.arizona.edu/" target="_blank"><img src="https://ailab-ua.github.io/courses/footer-ua2.png" border="0" alt="The University of Arizona" width="52" height="38" /></a><a href="http://live-uas-eller.pantheonsite.io/"><img src="https://ailab-ua.github.io/courses/footer-eller3.png" border="0" alt="Eller College of Management" width="133" height="38" /></a></p>
 </div></div></div>  </div>
 
 </div>
