--- a/MIS464/index.html
+++ b/MIS464/index.html
@@ -40,7 +40,7 @@ a:link,a:visited {
   
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
+<ul><li><a href="/courses/MIS464/mis_464_syllabus_spring_2019_revised.pdf" target="_blank">Printable Syllabus copy and Course Outline</a></li>
 <li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
@@ -53,14 +53,14 @@ a:link,a:visited {
 <li><a href="#sessions">Lab Sessions and Guest Speakers</a></li>
 </ul></div>
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
-<p>See page 4 of the <a href="/courses/MIS464/mis_464_syllabus-spring_2019.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
+<p>See page 4 of the <a href="/courses/MIS464/mis_464_syllabus_spring_2019_revised.pdf" target="_blank">printable copy of the MIS 464 Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION for Spring 2019</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 9:30AM-10:45AM, MCCL 126 <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />
 Office/Phone: MCCL 430X, (520) 621-4153 <br />
-Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
+Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) <br />
 Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://ailab-ua.github.io/courses/MIS464</a>  (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at:<em>  </em><a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
@@ -98,7 +98,7 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 <li>Authorship analysis: lexical, syntactic, structural, and semantic analysis</li>
 <li>Sentiment and affect analysis: lexicon-based, machine learning based</li>
 <li>Information visualization: scientific, text, and web visualization</li>
-</ul><h3>Topic 5: Emerging Research in Data ad Web Mining (major conferences, groups, opportunities)</h3>
+</ul><h3>Topic 5: Emerging Research in Data and Web Mining (major conferences, groups, opportunities)</h3>
 <ul><li>Emerging research in major data and web mining conferences: ACM KDD, IEEE ICDM, WWW, ACM SIGIR, ACM CHI, AAAI, IJCAI, ICML, NIPS, ICLR</li>
 <li>Key journals: MISQ, ISR, IEEE TKDE, JAMIA, JBI, JASIST</li>
 <li>Emerging research in major academic institutions: Stanford, Berkeley, CMU, MIT</li>
@@ -107,13 +107,16 @@ Class Web site: <a href="https://ailab-ua.github.io/courses/MIS464">https://aila
 </ul><h3><a name="grading" id="grading"></a>GRADING POLICY</h3>
 <ul><li>Project proposal: 5%</li>
 <li>Midterm exam:  30%</li>
+<li>Extra credit assignments: 10%</li>
 <li>Review paper: 15%</li>
 <li>Research project: 40%</li>
 <li>Class attendance and participation: 10%</li>
-<li>Total: 100%</li>
+<li>Total: 110%</li>
 </ul><h3><a name="coursework" id="coursework"></a>COURSEWORK, EXAMS, AND ASSIGNMENTS</h3>
 <h3>MIDTERM EXAM (30%)</h3>
 <p>The midterm exam will be closed book, closed notes and in the short-essay format (8-10 questions). The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. Academic integrity will be strictly enforced. <span style="text-decoration: underline;"><strong>Consequences for cheating will be severe</strong></span>.</p>
+<h3>EXTRA CREDIT ASSIGNMENTS (10%)</h3>
+In order to improve students’ hands-on data analytics knowledge and to facilitate final project execution, we are adding two Extra Credit Assignments in this semester – the first on Tableau and the second on Weka. Each team is required to identify 1-2 public data sources (e.g., data.gov, Kaggle) in the application area of their final Research Project (e.g., security, health, finance, e-commerce) and execute selected meaningful data exploration/visualization or analytics functions. Each assignment is worth 5% of final grade. A team report summarizing results with screen shots (5 pages, IEEE format) needs to be submitted in two weeks for each assignment. No literature review is required.</p>
 <h3>REVIEW PAPER PRESENTATION AND PROPOSAL (20%)</h3>
 <p>Each student will be required to form a two-person team. Each team will select an emerging data analytics topic of interest and develop a comprehensive review paper for the topic. Secondary literature review will be needed based on recent papers published in press, magazines, conferences, and journals. Each team (both students) will be required to present their review in the second half of the semester (10 minutes each). The instructor will suggest selected emerging topics for consideration. A paper review and project proposal will be needed in the third week of the semester.</p>
 <h3>RESEARCH PROJECT PRESENTATION AND PAPER (40%)</h3>
