--- a/MIS611D/index.htm
+++ b/MIS611D/index.htm
@@ -35,7 +35,7 @@ a:link,a:visited {
 <font face="MiloWeb-Text"> 
   <div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even" property="content:encoded"><div class="grey-callout">
 <h3 class="title">SYLLABUS ITEMS</h3>
-<ul><li><a href="/courses/MIS611D/mis_611d_syllabus_spring_2019.pdf"  target="_blank">Printable Syllabus copy and Course Outline</a><a href="#outline"></a></li>
+<ul><li><a href="/courses/MIS611D/mis_611d_syllabus_spring_2019_revised.pdf"  target="_blank">Printable Syllabus copy and Course Outline</a><a href="#outline"></a></li>
 <li><a href="/courses/index.html">Class Resources Page</a></li>
 <li><a href="#information">Class Information</a></li>
 <li><a href="#material">Class Material</a></li>
@@ -48,13 +48,13 @@ a:link,a:visited {
 <li><a href="#sessions">Lab Sessions and Guest Speakers</a></li>
 </ul></div>
 <h3><a name="outline" id="outline"></a>COURSE OUTLINE</h3>
-<p>See page 4 of the <a href="/courses/MIS611D/mis_611d_syllabus_spring_2019.pdf" target="_blank">printable copy of the Syllabus</a> for the day by day course outline.</p>
+<p>See page 4 of the <a href="/courses/MIS611D/mis_611d_syllabus_spring_2019_revised.pdf" target="_blank">printable copy of the Syllabus</a> for the day by day course outline.</p>
 <h3><a name="resources" id="resources"></a>CLASS RESOURCES</h3>
 <p>The <a href="/courses/index.html">Class Resources page</a> contains links to a variety of resources helpful for the study of the various topics covered by this course.</p>
 <h3><a name="information" id="information"></a>CLASS INFORMATION</h3>
 <p>Instructor:  <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen"><strong>Hsinchun Chen</strong></a>, Ph.D., Professor, Management Information Systems Dept, Eller College of Management, University of Arizona</p>
 <p>Time/Classroom: T/TH 12:30PM-1:45PM, MCCL 430E <br />Instructor’s Office Hours: T/TH 2:00-3:00PM or by appointment <br />Office/Phone: MCCL 430X, (520) 621-4153 <br />
-Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="https://ai.arizona.edu/about/director">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) 
+Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu</a>; <a href="http://live-uas-eller.pantheonsite.io/people/hsinchun-chen">https://ai.arizona.edu/about/director</a> (email is the best way to reach me!) 
 <br />Class Web site: <a href="https://ailab-ua.github.io/courses/MIS611D">https://ailab-ua.github.io/courses/MIS611D</a> (VERY IMPORTANT!) <br />Teaching Assistants (TAs): <br /> - Shuo Yu, <a href="mailto:shuoyu@email.arizona.edu">shuoyu@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #34-35) <br /> - Hongyi Zhu, <a href="mailto:zhuhy@email.arizona.edu">zhuhy@email.arizona.edu</a>, MIS Ph.D. student (office: MCCL 430 Cubicle #36-37) <br />TA Office Hours: TA hours will be announced via email</p>
 <h3><a name="material" id="material"></a>CLASS MATERIAL (Optional)</h3>
 <ul><li><em>Data Mining: Practical Machine Learning Tools and Techniques, </em>by Witten, Frank, Hall &amp; Pal, 4th Edition, 2017, Morgan Kaufmann (also with a 5-week MOOC course). See more at: <a href="http://www.cs.waikato.ac.nz/ml/weka/">http://www.cs.waikato.ac.nz/ml/weka/</a></li>
@@ -104,11 +104,12 @@ Email/Web site: <a href="mailto:hchen@eller.arizona.edu">hchen@eller.arizona.edu
 <li>Proposal writing instruction and training: NSF, NIH review template &amp; process</li>
 </ul><h3><a name="grading" id="grading"></a>GRADING POLICY</h3>
 <ul><li>Project proposal: 5%</li>
+<li>Extra credit assignments: 10%</li>
 <li>Midterm exam:  30%</li>
 <li>Major conference review: 15%</li>
 <li>Research project: 40%</li>
 <li>Class attendance and participation: 10%</li>
-<li>Total: 100%</li>
+<li>Total: 110%</li>
 </ul><h3><a name="coursework" id="coursework"></a>COURSEWORK, EXAMS, AND ASSIGNMENTS</h3>
 <h3>MIDTERM EXAM (30%)</h3>
 <p>The midterm exam will be closed book, closed notes and in the short-essay format (8-10 questions). The questions will be based mostly on classroom lectures. There will be NO Final Exam for this class. Academic integrity will be strictly enforced. <span style="text-decoration: underline;"><strong>Consequences for cheating will be severe</strong></span>.</p>
