--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/the_state_of_data_science_machine_learning_-_kaggle_2017_survey.pdf" target="_blank">The State of Data Science and Machine Learning - Kaggle Survey 2017</a>, 2017. [<a href="https://www.kaggle.com/surveys/2017" target="_blank">Interactive Online Version</a>]</li>
 <li><a href="/courses/resources/bcr_summer_2017.pdf" target="_blank">Special Issue: BD2K Centers Open Doors to Discovery</a>, Biomedical Computation Review, Summer 2017. <a href="http://biomedicalcomputationreview.org/issue-landing/57874" target="_blank">[Online]</a></li>
 <li><a href="/courses/resources/ahmed-cybergate-misq-2008.pdf" target="_blank">CyberGate: A Design Framework and System for Text Analysis of Computer-Mediated Communication</a>, by Abbasi and Chen, December 2008 (MISQ) - PDF</li>
-<li><a href="/courses/resources/misq_cybergate.ppt" target="_blank">CyberGate: A Design Framework and System for Text Analysis of CMC</a>, by Abbasi and Chen, 2008 - PPT</li>
+<li><a href="/courses/resources/misq_cybergate.ppt">CyberGate: A Design Framework and System for Text Analysis of CMC</a>, by Abbasi and Chen, 2008 - PPT</li>
 <li style="display: inline !important;"></li>
 <li><a href="/courses/resources/ahmed-fakesite-misq-2010.pdf" target="_blank">Detecting Fake Websites: The Contribution of Statistical Learning Theory</a>, by Abbasi et al., September 2010 (MISQ) - PDF</li>
 <li><a href="/courses/resources/benjamin_et_al._2019_dice-e_-_a_framework_for_conducting_darknet_identification_collection_evaluation_with_ethics.pdf" target="_blank">DICE-E: A Framework for Conducting Darknet. Identification, Collection, Evaluation, with Ethics</a>, by Victor Benjamin, Joseph S. Valacich, and Hsinchun Chen, 2019 (MISQ) - PDF</li>
@@ -85,7 +85,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/5_insideinternetsearchengines_products.ppt">Products</a>, by William Chang and Jan Pedersen (SIGIR 1999) (75K)</li>
 <li><a href="/courses/MIS510/6_insideinternetsearchengines_business.ppt">Business</a>, by William Chang and Jan Pedersen (SIGIR 1999) (37K)</li>
 </ol>
-<li><a href="/courses/resources/search-rhodes-lee-giles.pptx" target="_blank">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
+<li><a href="/courses/resources/search-rhodes-lee-giles.pptx">Search Engines and Their Algorithms</a>, by C. Lee Giles (2018) (33M)</li>
 <li><a href="/courses/MIS510/9_brin98anatomy.pdf" target="_blank">The Anatomy of a Large-Scale Hypertextual Web Search Engine</a>, S. Brin and L. Page (1998)</li>
 <li><a href="/courses/MIS510/7_mis510-google-2007.ppt">Page Rank and Google Story</a>, by Vise and Malseed, 2005</li>
 <li><a href="/courses/MIS510/11_winston1984-ai-ch4.pdf" target="_blank">AI, Chapter 4. Search Algorithm</a>, Winston (1984)</li>
@@ -188,7 +188,7 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/yelpsample.rar">Yelp API Sample Code</a></li>
 
 </ol></ol><h3>TOPIC 3: Data Mining</h3>
-<ol><li><a href="/courses/resources/10algorithms-08.pdf" target="_blank">Top 10 Algorithms in Data Mining</a> (PDF)</li
+<ol><li><a href="/courses/resources/10algorithms-08.pdf" target="_blank">Top 10 Algorithms in Data Mining</a> (PDF)</li>
 <li><a href="/courses/MIS510/16_id3.pdf" target="_blank">ID3 Handout</a></li>
 <li><a href="/courses/MIS510/17_bpnn.pdf" target="_blank">Backpropagation Neural Network Handout</a></li>
 <li><a href="/courses/MIS611D/som.pdf" target="_blank">Self-organizing maps: an introduction</a></li>
@@ -222,15 +222,15 @@ a:link,a:visited {
 
 </ol><h3>TOPIC 4: Text Mining</h3>
 <ol><li><a href="/courses/MIS510/24_presentation-information-visulization-2005.ppt">Information Visualization</a></li>
-<li><a href="/courses/MIS510/16_information_visualization_for_digital_library.ppt" target="_blank">Information Visualization for Digital Library</a> (2.21M)</li>
+<li><a href="/courses/MIS510/16_information_visualization_for_digital_library.ppt">Information Visualization for Digital Library</a> (2.21M)</li>
 <li><a href="/courses/resources/visualizing_data_april_2019.pptx">Visualizing Data: Frameworks and Examples</a> (Hongyi Zhu, Sagar Samtani, Hsinchun Chen, Spring 2019)</li>
 <li><a href="/courses/resources/text_mining_review_april_2019.pptx" target="_blank">Text Mining: Techniques, Tools, Ontologies and Shared Tasks</a> (Xiao Liu, Shuo Yu, Hsinchun Chen, 2019)</li>
-
+</ol>
 <h3>TOPIC 5: Emerging Research in Data and Web Mining (for MIS 611D)</h3>
 <ol><li><a href="/courses/MIS510/shodan.rar">COPLINK, Dark Web, and Hacker Web: A Research Path in Security Informatics, by Dr. Hsinchun Chen</a></li>
 <li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen</li>
 <li><a href="/courses/MIS611D/topology-of-dark-networks-xu-2007.pdf" target="_blank">The Topology of Dark Networks</a>, by Jennifer Xu and Hsinchun Chen</li>
-<li><a href="/courses/resources/exploring_dark_networks_nas_october_2017_-_copy.pptx" target="_blank">Exploring Dark Networks: From the Surface Web to the Dark Web</a>, by Hsinchun Chen, October 2017</li>
+<li><a href="/courses/resources/exploring_dark_networks_nas_october_2017_-_copy.pptx">Exploring Dark Networks: From the Surface Web to the Dark Web</a>, by Hsinchun Chen, October 2017</li>
 <li><a href="/courses/MIS510/misq_cybergate.ppt">CyberGate: A Design Framework and System for Text Analysis of CMC</a>, by Ahmed Abbasi and Hsinchun Chen</li>
 <li><a href="/courses/MIS611D/jbi-medtime.pdf" target="_blank">MedTime: A Temporal Information Extraction System for Clinical Narratives</a>, by Yu-Kai Lin, Hsinchun Chen and Randall A. Brown (2013)</li>
 <li><a href="/courses/MIS611D/leroy-smart-and-connected-health-2014.pdf" target="_blank">Smart and Connected Health: Guest Editors' Introduction</a>, by Gondy Leroy, Hsinchun Chen, and Thomas C. Rindflesch (2014)</li>
@@ -251,13 +251,13 @@ a:link,a:visited {
 <li><a href="/courses/MIS510/ai-virtual-worlds.pdf" target="_blank">AI, Virtual Worlds, and Massively Multiplayer Online Games</a>, by Hsinchun Chen and Yulei Zhang (January/February 2011)</li>
 <li><a href="/courses/MIS510/smart_health_and_wellbeing.pdf" target="_blank">Smart Health and Wellbeing</a>, by Hsinchun Chen (September/October 2011)</li>
 <li><a href="/courses/MIS510/smart_market_and_money.pdf" target="_blank">Smart Market and Money</a>, by Hsinchun Chen (November/December 2011)</li>
-</ol><li><a href="/courses/MIS611D/chen_ntu_march_2018.pptx" target="_blank">Recent Research at the Artificial Intelligence Lab of the University of Arizona: AZSecure for Advanced Cyber Threat Intelligence and SilverLink for Proactive Mobile Health</a>, by Hsinchun Chen, March 2018.</li>
-<li><a href="/courses/MIS611D/chen_informs_november_2018.pptx" target="_blank">Cybersecurity and AI: A Data Science Perspective</a>, by Hsinchun Chen, November 2018.</li>
+</ol><li><a href="/courses/MIS611D/chen_ntu_march_2018.pptx">Recent Research at the Artificial Intelligence Lab of the University of Arizona: AZSecure for Advanced Cyber Threat Intelligence and SilverLink for Proactive Mobile Health</a>, by Hsinchun Chen, March 2018.</li>
+<li><a href="/courses/MIS611D/chen_informs_november_2018.pptx">Cybersecurity and AI: A Data Science Perspective</a>, by Hsinchun Chen, November 2018.</li>
 <li>Cyber Threat Intelligence (February 2019)</li>
-<ol style="list-style-type: lower-alpha;"><li><a href="/courses/resources/cti_1_overview_fundamental.pptx" target="_blank">Overview Fundamental</a></li>
-<li><a href="/courses/resources/cti_2_hacker_community_data.pptx" target="_blank">Hacker Community Data</a></li>
-<li><a href="/courses/resources/cti_3_hacker_assets_portal.pptx" target="_blank">Hacker Assets Portal</a></li>
-<li><a href="/courses/resources/capstone_future_0.pptx" target="_blank">Looking to the Future</a></li>
+<ol style="list-style-type: lower-alpha;"><li><a href="/courses/resources/cti_1_overview_fundamental.pptx">Overview Fundamental</a></li>
+<li><a href="/courses/resources/cti_2_hacker_community_data.pptx">Hacker Community Data</a></li>
+<li><a href="/courses/resources/cti_3_hacker_assets_portal.pptx">Hacker Assets Portal</a></li>
+<li><a href="/courses/resources/capstone_future_0.pptx">Looking to the Future</a></li>
 
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
