--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/text_mining_review_april_2019.pptx" target="_blank">Text Mining: Techniques, Tools, Ontologies and Shared Tasks</a> (Xiao Liu, Shuo Yu, Hsinchun Chen, 2019)</li>
 </ol>
 <h3>TOPIC 5: Emerging Research in Data and Web Mining (for MIS 611D)</h3>
-<ol><li><a href="/courses/MIS510/shodan.rar">COPLINK, Dark Web, and Hacker Web: A Research Path in Security Informatics, by Dr. Hsinchun Chen</a></li>
+<ol><li>COPLINK, Dark Web, and Hacker Web: A Research Path in Security Informatics, by Dr. Hsinchun Chen</li>
 <li><a href="/courses/MIS611D/criminal-network-analysis-xu-2005.pdf" target="_blank">Criminal Network Analysis and Visualization</a>, by Jennifer Xu and Hsinchun Chen</li>
 <li><a href="/courses/MIS611D/topology-of-dark-networks-xu-2007.pdf" target="_blank">The Topology of Dark Networks</a>, by Jennifer Xu and Hsinchun Chen</li>
 <li><a href="/courses/resources/exploring_dark_networks_nas_october_2017_-_copy.pptx">Exploring Dark Networks: From the Surface Web to the Dark Web</a>, by Hsinchun Chen, October 2017</li>
