--- a/index.html
+++ b/index.html
@@ -261,7 +261,9 @@ a:link,a:visited {
 
 </ol><h3>MISCELLANEOUS RESOURCES</h3>
 <ul><li><a href="/courses/MIS510/mis510-syllabus-spring-2014.pdf" target="_blank">MIS 510 Syllabus</a></li>
-<li><a href="/courses/resources/SecuritySoftwareTweets.zip" target="_blank">MIS 562 Twitter</a></li>
+<!--  COMMENTED OUT
+  <li><a href="/courses/resources/SecuritySoftwareTweets.zip" target="_blank">MIS 562 Twitter</a></li>
+-->
 </ul><hr />
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS464">Class Page for MIS 464, Data Analytics</a>
 <p><img src="/courses/red-diamond.gif" border="0" width="19" height="19" /><a href="/courses/MIS611D">Class page for MIS 611D, Topics in Data and Web Mining</a>
