--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ a:link,a:visited {
 <li><a href="/courses/resources/artificial_intelligence_and_deep_learning_lee_giles.ppt" target="_blank">Artificial Intelligence and Deep Learning</a> (Lee Giles, 2018)</li>
 <li><a href="/courses/resources/representation_learning_lee_giles.pptx" target="_blank">Representation Learning</a> (Alexander G. Ororbia II and Lee Giles, 2018)</li>
 
-</ol><h3>TOPIC 4: Text Mining</h3>
+</ol><h3>TOPIC 4: Text Mining(Sentiment Analysis, Topic Modeling, Visualization)</h3>
 <ol><li><a href="/courses/MIS510/24_presentation-information-visulization-2005.ppt">Information Visualization</a></li>
 <li><a href="/courses/MIS510/16_information_visualization_for_digital_library.ppt">Information Visualization for Digital Library</a> (2.21M)</li>
 <li><a href="/courses/resources/visualizing_data_april_2019.pptx">Visualizing Data: Frameworks and Examples</a> (Hongyi Zhu, Sagar Samtani, Hsinchun Chen, Spring 2019)</li>
